k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apods
  labels:
    name: apods
    environment: production
